update code before adding login error

--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -61,13 +61,13 @@
 
 .form-group input:focus {
   outline: none;
-  border-color: #ff5722;
+  border-color: #e92d28;
 }
 
 .login-button {
   width: 100%;
   padding: 12px;
-  background-color: #ff5722;
+  background-color: #e92d28;
   color: white;
   border: none;
   border-radius: 8px;
@@ -149,7 +149,7 @@
 }
 
 .signup-link a {
-  color: #ff5722;
+  color: #e92d28;
   text-decoration: none;
   font-weight: 500;
 }
